<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_weight="0.75"
                android:background="@color/colorPrimary"
                android:gravity="left|fill_vertical"
                android:paddingLeft="12dp"
                android:text="@string/title_Setting"
                android:textColor="@color/white"
                android:textSize="@dimen/ButtonText"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/settingsDialog_CloseIV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/baseline_clear_white_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsDialog_PasswordLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="4dp">

                <EditText
                    android:id="@+id/settingsDialog_PasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter the password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsDialog_HQDetailsLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/MarginFull"
            android:layout_marginRight="@dimen/MarginFull"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/HQ_URL" />

                <EditText
                    android:id="@+id/settingsDialog_HQlinkET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1" />

                <Button
                    android:id="@+id/settingsDialog_SyncBT"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.4"
                    android:text="@string/Sync"
                    android:textAllCaps="false"
                    android:textColor="@color/text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/Restaurant" />

                <Spinner
                    android:id="@+id/settingsDialog_RestaurantSP"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:clickable="false"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/Outlet" />

                <Spinner
                    android:id="@+id/settingsDialog_OutletSP"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:clickable="false"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/settingsDialog_SaveBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/settingsDialog_SavePasswordBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/lbl_Proceed"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
