<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:elevation="20dp"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="175dp">

            <ImageView
                android:id="@+id/foodItemListRow_ImageIV"
                android:layout_width="250dp"
                android:layout_height="165dp"
                android:layout_margin="8dp"
                android:scaleType="fitXY"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/foodItemListRow_ProgressPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/MarginRegular"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/foodItemListRow_ItemNameLabelTV"
                    android:layout_width="match_parent"
                    android:text="Veg Meal"
                    android:textColor="@color/textPrimary"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/foodItemListRow_OrderedLabelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Ordered"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/ListText" />

                    <TextView
                        android:id="@+id/foodItemListRow_ScannedLabelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Scanned"
                        android:textColor="@color/colorScanned"
                        android:textSize="@dimen/ListText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/foodItemListRow_OrderedTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="100"
                        android:textColor="@color/textPrimary"
                        android:textSize="@dimen/ListText" />

                    <TextView
                        android:id="@+id/foodItemListRow_ScannedTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="50"
                        android:textColor="@color/colorScanned"
                        android:textSize="@dimen/ListText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/foodItemListRow_MapItLayoutLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/marginHalf"
                android:background="@drawable/rounded_button_bg"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:paddingRight="4dp"
                    android:src="@drawable/map_it" />

                <TextView
                    android:id="@+id/foodItemListRow_MapItTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/MapIt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ButtonText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>